Implementing 90% of the backend
